# remote-monad-examples

./: .gitignore  README.md  remote-monad-code.cabal
Command/: Command.hs  Main.hs  RCommand.hs
Deep/: Binder.hs  DeepCommand.hs  DeviceDeep.hs  Expr.hs  Main.hs  Transport.hs
Packet/: #Packet.hs#  RPacket.hs
Procedure/: Procedure.hs  RProcedure.hs
Strong/: Main.hs
Weak/: Main.hs
classic-examples/: README.md  remote-monad-classic.cabal
classic-examples/Applicative/: Main.hs  RPrim.hs
classic-examples/Command/: RCommand.hs
classic-examples/Deep/: DeepProcedure.hs
classic-examples/Packet/: Packet.hs  RPacket.hs
classic-examples/Procedure/: Main.hs  RProcedure.hs
classic-examples/Strong/: Main.hs
hackage-examples/: Applicative.hs  Client.hs  README.md  Server.hs  Strong.hs  Types.hs  Weak.hs  remote-monad-hackage.cabal
