name:                remote-monad-hackage
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill, Justin Dawson, Mark Grebe
maintainer:          jdawson@ku.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md, README.md~
cabal-version:       >=1.10

executable remote-monad-hackage-weak
  main-is:             Weak.hs
  build-depends:       base >=4.7 && <4.9
                     , remote-monad == 0.2
                     , natural-transformation >= 0.3.1 && < 0.4
  default-language:    Haskell2010
  
