name:                remote-monad-hackage
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Justin Dawson
maintainer:          jdawson@ku.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md, README.md~
cabal-version:       >=1.10

executable remote-monad-hackage-client
  main-is:             Client.hs
  build-depends:       base >=4.7 && <4.9
                     , natural-transformation >= 0.3.1 && < 0.4
                     , network-transport >= 0.4 && < 0.5
                     , network-transport-tcp >= 0.5 && < 0.6
                     , remote-binary == 0.1
                     , remote-monad == 0.3
                     , remote-transport == 0.1
  default-language:    Haskell2010


executable remote-monad-hackage-server
  main-is:             Applicative.hs
  build-depends:       base                   >=4.7 && <4.9
                     , binary                 >= 0.7 && < 0.9
                     , natural-transformation >= 0.3.1 && < 0.4
                     , network-transport      >= 0.4  && < 0.5
                     , network-transport-tcp  >= 0.5  && < 0.6
                     , remote-monad           == 0.3
                     , remote-binary          == 0.1
                     , remote-transport       == 0.1
                     , random                 >= 1.1 && < 1.2
  default-language:    Haskell2010
